# globmatch

./: .travis.yml  AUTHORS  ChangeLog  LICENSE.md  README.md  appveyor.yml  requirements.txt  setup.cfg  setup.py
.github/workflows/: test.yml
fnglob/: __init__.py  pathutils.py  translation.py
globmatch/: __init__.py  pathutils.py  translation.py
tests/: conftest.py  test_match.py  test_pathutils.py  test_translation.py
