[bdist_wheel]
universal=1
[flake8]
max-line-length=140
ignore=E123,E265,E261,E226,E241,E221,E251s
[pep8]
max-line-length=140

[metadata]
name = globmatch
author = Vidar Tonaas Fauske
author-email = vidartf@gmail.com
summary = Matching paths against globs
description-file = README.md
home-page = https://gtihub.com/vidartf/globmatch
license = BSD-3
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
keywords =
    glob
    fnmatch
    matching

[files]
packages =
    globmatch

[extras]
test =
    pytest
    pytest-cov

[manifix]
known_excludes =
    .git*
    *.pyc
    build
    dist
